Changing folder structure a bit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base",
+  "name": "Fronty",
   "description": "Basic structure for small development projects.",
   "version": "1.0.0",
   "main": "index.js",
