--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-consolidate": "^0.1.2",
+    "gulp-iconfont": "^1.0.1",
     "gulp-imagemin": "^2.3.0",
     "gulp-jade": "^1.1.0",
     "gulp-jshint": "^1.11.2",
     "gulp-jslint": "^0.2.2",
+    "gulp-lodash": "^0.1.1",
     "gulp-pleeease": "^1.2.0",
     "gulp-stylus": "^2.0.5",
     "gulp-util": "^3.0.6",
@@ -21,6 +24,7 @@
     "imagemin-pngquant": "^4.1.2",
     "jeet": "^6.1.2",
     "jshint-stylish": "^2.0.1",
+    "lodash": "^3.10.1",
     "run-sequence": "^1.1.2",
     "rupture": "^0.6.1"
   }
