--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "description": "Basic structure for small development projects.",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Ana Reyna",
+  "author": "Ana Reyna @anareyna",
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.7.7",
     "gulp": "^3.9.0",
+    "gulp-bower": "0.0.13",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "^0.1.2",
@@ -15,10 +16,11 @@
     "gulp-imagemin": "^2.3.0",
     "gulp-jade": "^1.1.0",
     "gulp-jshint": "^1.11.2",
-    "gulp-jslint": "^0.2.2",
     "gulp-lodash": "^0.1.1",
     "gulp-pleeease": "^1.2.0",
+    "gulp-plumber-notifier": "0.0.3",
     "gulp-stylus": "^2.0.5",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.6",
     "gulp.spritesmith": "^3.8.2",
     "imagemin-pngquant": "^4.1.2",
