--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-lodash": "^0.1.1",
     "gulp-pleeease": "^1.2.0",
     "gulp-plumber-notifier": "0.0.3",
+    "gulp-postcss": "^6.1.1",
     "gulp-stylus": "^2.0.5",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.6",
@@ -27,6 +28,8 @@
     "jeet": "^6.1.2",
     "jshint-stylish": "^2.0.1",
     "lodash": "^3.10.1",
+    "lost": "^7.0.3",
+    "poststylus": "^0.2.3",
     "run-sequence": "^1.1.2",
     "rupture": "^0.6.1"
   }
