--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
   "name": "Fronty",
   "description": "Basic structure for small development projects.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "author": "Ana Reyna @anareyna",
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.7.7",
-    "gulp": "^3.9.0",
+    "browser-sync": "2.7.7",
+    "gulp": "3.9.0",
     "gulp-bower": "0.0.13",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-consolidate": "^0.1.2",
-    "gulp-iconfont": "^1.0.1",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-lodash": "^0.1.1",
-    "gulp-pleeease": "^1.2.0",
+    "gulp-coffee": "2.3.2",
+    "gulp-concat": "2.6.0",
+    "gulp-consolidate": "0.1.2",
+    "gulp-iconfont": "1.0.1",
+    "gulp-imagemin": "3.0.3",
+    "gulp-jshint": "1.11.2",
+    "gulp-lodash": "0.1.1",
+    "gulp-pleeease": "2.0.2",
     "gulp-plumber-notifier": "0.0.3",
-    "gulp-stylus": "^2.0.5",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.6",
-    "gulp.spritesmith": "^3.8.2",
-    "imagemin-pngquant": "^4.1.2",
-    "jeet": "^6.1.2",
-    "jshint-stylish": "^2.0.1",
-    "lodash": "^3.10.1",
-    "run-sequence": "^1.1.2",
-    "rupture": "^0.6.1"
+    "gulp-pug": "3.0.4",
+    "gulp-stylus": "2.0.5",
+    "gulp-uglify": "1.5.3",
+    "gulp-util": "3.0.6",
+    "gulp.spritesmith": "3.8.2",
+    "imagemin-pngquant": "4.1.2",
+    "jeet": "6.1.2",
+    "jshint-stylish": "2.0.1",
+    "lodash": "4.16.1",
+    "lost": "7.0.4",
+    "poststylus": "0.2.3",
+    "run-sequence": "1.1.2",
+    "rupture": "0.6.1"
   }
 }
