--- a/package.json
+++ b/package.json
@@ -6,30 +6,30 @@
   "author": "Ana Reyna @anareyna",
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "2.7.7",
-    "gulp": "3.9.0",
+    "browser-sync": "2.16.0",
+    "gulp": "3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-coffee": "2.3.2",
     "gulp-concat": "2.6.0",
     "gulp-consolidate": "0.1.2",
     "gulp-iconfont": "1.0.1",
     "gulp-imagemin": "3.0.3",
-    "gulp-jshint": "1.11.2",
-    "gulp-lodash": "0.1.1",
+    "gulp-jshint": "2.0.1",
+    "gulp-lodash": "0.1.2",
     "gulp-pleeease": "2.0.2",
     "gulp-plumber-notifier": "0.0.3",
     "gulp-pug": "3.0.4",
-    "gulp-stylus": "2.0.5",
-    "gulp-uglify": "1.5.3",
-    "gulp-util": "3.0.6",
+    "gulp-stylus": "2.5.0",
+    "gulp-uglify": "2.0.0",
+    "gulp-util": "3.0.7",
     "gulp.spritesmith": "3.8.2",
     "imagemin-pngquant": "4.1.2",
-    "jeet": "6.1.2",
+    "jshint": "2.9.3",
     "jshint-stylish": "2.0.1",
     "lodash": "4.16.1",
-    "lost": "7.0.4",
+    "lost": "7.1.0",
     "poststylus": "0.2.3",
-    "run-sequence": "1.1.2",
+    "run-sequence": "1.2.2",
     "rupture": "0.6.1"
   }
 }
