--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
   "private": true,
   "devDependencies": {
     "jquery": "1.11.1",
-    "html5shiv": "~3.7.2",
-    "modernizr": "~2.8.3"
+    "html5shiv": "3.7.2",
+    "modernizr": "2.8.3",
+    "breakpoint-sass": "2.7.0",
+    "breakpoint-slicer": "2.0.0"
   }
 }
