--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ana Reyna @anareyna",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.5.1",
     "babel-cli": "6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "browser-sync": "2.7.7",
@@ -21,19 +22,19 @@
     "gulp-lodash": "0.1.1",
     "gulp-pleeease": "1.2.0",
     "gulp-plumber-notifier": "0.0.3",
-    "gulp-postcss": "6.1.1",
+    "gulp-postcss": "^6.1.1",
     "gulp-pug": "3.0.4",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.3.2",
     "gulp-sass-glob": "1.0.6",
+    "gulp-sourcemaps": "^1.7.3",
     "gulp-uglify": "1.5.3",
     "gulp-util": "3.0.6",
     "gulp.spritesmith": "3.8.2",
     "imagemin-pngquant": "4.1.2",
     "jshint-stylish": "2.0.1",
     "lodash": "3.10.1",
-    "lost": "7.0.3",
-    "postcss-scss": "0.3.1",
+    "lost": "^7.0.3",
     "run-sequence": "1.1.2"
   }
 }
