--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "gulp-coffee": "2.3.2",
     "gulp-concat": "2.6.0",
     "gulp-consolidate": "0.1.2",
+    "gulp-filter": "^4.0.0",
     "gulp-iconfont": "1.0.1",
     "gulp-imagemin": "3.0.3",
     "gulp-jshint": "2.0.1",
     "gulp-lodash": "0.1.2",
+    "gulp-newer": "^1.3.0",
     "gulp-pleeease": "2.0.2",
     "gulp-plumber-notifier": "0.0.3",
     "gulp-pug": "3.0.4",
@@ -23,13 +25,15 @@
     "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
     "gulp.spritesmith": "3.8.2",
+    "i": "^0.3.5",
     "imagemin-pngquant": "4.1.2",
     "jshint": "2.9.3",
     "jshint-stylish": "2.0.1",
     "lodash": "4.16.1",
     "lost": "7.1.0",
     "poststylus": "0.2.3",
-    "pug-inheritance": "1.3.0",
+    "pug": "^0.1.0",
+    "pug-inheritance": "^2.0.1",
     "run-sequence": "1.2.2",
     "rupture": "0.6.1",
     "through2": "^2.0.1"
