--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "browser-sync": "2.16.0",
     "gulp": "3.9.1",
     "gulp-bower": "0.0.13",
+    "gulp-changed": "^1.3.2",
+    "gulp-changed-in-place": "^2.0.3",
     "gulp-coffee": "2.3.2",
     "gulp-concat": "2.6.0",
     "gulp-consolidate": "0.1.2",
     "gulp-filter": "^4.0.0",
     "gulp-iconfont": "1.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "3.0.3",
     "gulp-jshint": "2.0.1",
     "gulp-lodash": "0.1.2",
@@ -22,6 +25,7 @@
     "gulp-plumber-notifier": "0.0.3",
     "gulp-pug": "3.0.4",
     "gulp-pug-inheritance": "^0.2.1",
+    "gulp-pug-lint": "^0.1.6",
     "gulp-stylus": "2.5.0",
     "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
@@ -35,7 +39,7 @@
     "poststylus": "0.2.3",
     "pug": "^0.1.0",
     "pug-inheritance": "^2.0.1",
-    "run-sequence": "1.2.2",
+    "run-sequence": "^1.2.2",
     "rupture": "0.6.1",
     "through2": "^2.0.1"
   }
