--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "Fronty",
   "description": "Basic structure for small development projects.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "author": "Ana Reyna @anareyna",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "6.22.2",
+    "babel-preset-es2015": "6.22.0",
     "browser-sync": "2.16.0",
     "gulp": "3.9.1",
+    "gulp-babel": "6.1.2",
     "gulp-bower": "0.0.13",
     "gulp-coffee": "2.3.2",
-    "gulp-concat": "2.6.0",
     "gulp-consolidate": "0.1.2",
     "gulp-iconfont": "1.0.1",
     "gulp-imagemin": "3.0.3",
-    "gulp-jshint": "2.0.1",
+    "gulp-jshint": "2.0.4",
     "gulp-lodash": "0.1.2",
     "gulp-pleeease": "2.0.2",
     "gulp-plumber-notifier": "0.0.3",
@@ -24,8 +26,8 @@
     "gulp-util": "3.0.7",
     "gulp.spritesmith": "3.8.2",
     "imagemin-pngquant": "4.1.2",
-    "jshint": "2.9.3",
-    "jshint-stylish": "2.0.1",
+    "jshint": "2.9.4",
+    "jshint-stylish": "2.2.1",
     "lodash": "4.16.1",
     "lost": "7.1.0",
     "poststylus": "0.2.3",
