--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
     "gulp-bower": "0.0.13",
+    "gulp-changed": "1.3.2",
     "gulp-coffee": "2.3.2",
     "gulp-consolidate": "0.1.2",
     "gulp-iconfont": "1.0.1",
@@ -23,7 +24,6 @@
     "gulp-pug": "3.0.4",
     "gulp-stylus": "2.5.0",
     "gulp-uglify": "2.0.0",
-    "gulp-util": "3.0.7",
     "gulp.spritesmith": "3.8.2",
     "imagemin-pngquant": "4.1.2",
     "jshint": "2.9.4",
