--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "babel-cli": "6.22.2",
     "babel-preset-es2015": "6.22.0",
     "browser-sync": "2.16.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
     "gulp-bower": "0.0.13",
     "gulp-changed": "1.3.2",
-    "gulp-coffee": "2.3.2",
     "gulp-consolidate": "0.1.2",
+    "gulp-eslint": "^4.0.0",
     "gulp-iconfont": "1.0.1",
     "gulp-imagemin": "3.0.3",
-    "gulp-jshint": "2.0.4",
     "gulp-lodash": "0.1.2",
     "gulp-pleeease": "2.0.2",
     "gulp-plumber-notifier": "0.0.3",
@@ -26,8 +30,6 @@
     "gulp-uglify": "2.0.0",
     "gulp.spritesmith": "3.8.2",
     "imagemin-pngquant": "4.1.2",
-    "jshint": "2.9.4",
-    "jshint-stylish": "2.2.1",
     "lodash": "4.16.1",
     "lost": "7.1.0",
     "poststylus": "0.2.3",
